[package]
name = "krustmote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ['tokio', "image", "advanced"] }
serde = { version = "1" }
serde_json = { version = "1" }
jsonrpsee = { version = "0.22", features = [
    "ws-client",
    "macros",
    "client-ws-transport-native-tls",
] }
tokio = { version = "1.31", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
urlencoding = "2.1.3"
image = "0.24"
chrono = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "blob", "serde_json"] }
tokio-rusqlite = "0.4.0"
fxhash = "0.2.1"
indexmap = "2.0.0"
# dirs-next = "2.0.0"
