[package]
name = "krustmote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ['tokio', "image", "advanced"] }
serde = "1.0.217"
serde_json = "1.0.138"
jsonrpsee = { version = "0.24.8", features = [
    "ws-client",
    "macros",
    # "client-ws-transport-native-tls",
] }
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1.17"
reqwest = { version = "0.12.12", features = ["blocking"] }
urlencoding = "2.1.3"
image = "0.25.5"
chrono = "0.4.39"
rusqlite = { version = "0.32.0", features = ["bundled", "blob", "serde_json"] }
tokio-rusqlite = "0.6.0"
fxhash = "0.2.1"
indexmap = "2.7.1"
# dirs-next = "2.0.0"
