[package]
name = "krustmote"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14.0", features = ['tokio', "image", "advanced"] }
anyhow = "1.0"
serde = "1.0.228"
serde_json = "1.0.145"
jsonrpsee = { version = "0.26.0", features = ["ws-client", "macros"] }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1.17"
reqwest = { version = "0.12.25", features = ["blocking"] }
urlencoding = "2.1.3"
image = "0.25.9"
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled", "blob", "serde_json"] }
tokio-rusqlite = "0.7.0"
fxhash = "0.2.1"
indexmap = "2.12.1"
directories-next = "2.0.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
